--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,10 @@ license = "MIT"
 
 [dependencies]
 anyhow = "1.0"
+bytemuck = { version = "1.22.0", features = ["derive"] }
+log = "0.4.26"
 pollster = "0.4"
 rapier3d = "0.23"
+simple_logger = "5.0.0"
 wgpu = "24.0"
 winit = "0.30"
