--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ license = "MIT"
 [dependencies]
 anyhow = "1.0"
 bytemuck = { version = "1.22.0", features = ["derive"] }
+glam = "0.30.0"
+image = "0.25.5"
 log = "0.4.26"
 pollster = "0.4"
 rapier3d = "0.23"
