--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ license = "MIT"
 
 [dependencies]
 anyhow = "1.0"
+bimap = "0.6"
 bytemuck = { version = "1.23", features = ["derive"] }
 glam = "0.30"
 gltf = "1.4"
